fix: Horizontal scroll

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,4 +1,5 @@
 .header {
+  box-sizing: border-box;
   padding: 20px 0;
   width: 100%;
   border: 4px solid #000;
